--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   html,
   body {
     font-family: 'Open Sans', sans-serif;
-    @apply antialiased;
+    @apply antialiased bg-gray-50;
   }
 
   input[type='number']::-webkit-inner-spin-button,
@@ -19,5 +19,5 @@
 }
 
 .custom-flags button {
-  @apply h-[56px] w-[109px] hover:border-primary-brand-color bg-white border-2 border-gray-400 transition-all;
+  @apply h-[56px] w-[109px] hover:border-primary-brand-color bg-white border-2 border-gray-400  hover:border-primary-brand-color focus:border-primary-brand-color active:border-primary-brand-color focus-visible:border-primary-brand-color focus:outline-none transition-colors;
 }
